--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,10 @@
   },
   "dependencies": {
     "@primeuix/themes": "^2.0.2",
+    "@tailwindcss/vite": "^4.1.18",
     "primevue": "^4.5.4",
+    "tailwindcss": "^4.1.18",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.26"
   },
   "devDependencies": {
